--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -7,12 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: denolib/setup-deno@master
       - uses: actions/checkout@v1
-      - name: Run User Test
-        uses: denolib/deno-action@0.19.0
-        with:
-          args: run user_test.ts --allow-net --allow-env
-      - name: Run Gist Test
-        uses: denolib/deno-action@0.19.0
-        with:
-          args: run gist_test.ts --allow-net --allow-env
+      - name: Run tests
+        run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} deno test --allow-env --allow-net
